updated climatefuture.ipynb content

--- a/notebooks/climatefuture.ipynb
+++ b/notebooks/climatefuture.ipynb
@@ -48,7 +48,25 @@
     "    These are all the publicly available datasets of census data provided by the US Census Bureau. Data can be accessed in html, xml, and json formats. Many available datasets such as economic census, population estimates and projections, geography information, and poverty statistics are useful to analyze demographic and socio-economic status of a place.\n",
     "\n",
     "##### Data:\n",
+    "1. NASA Goddard Space Flight Center. (n.d.). _DONKI: Data of NASA's Space Weather Research Center_. NASA. Retrieved from https://ccmc.gsfc.nasa.gov/tools/DONKI/\n",
     "\n",
+    "    The Space Weather Database of Notifications, Knowledge, Information (DONKI) provides daily updates on the interpretation of space weather observations, analyses, models, forecasts, and alerts from the Space Weather Research Center. The data source shares data through webservice API. There is a request limit of 1,000 requests per hour using NASA's API. API key can be generated with basic information (first name, last name and email). No specific licensing information found on the webpage.\n",
+    "\n",
+    "2. Open-Meteo. (n.d.). _Climate API documentation_. Retrieved from https://open-meteo.com/en/docs/climate-api\n",
+    "\t\t\n",
+    "    This API provides access to climate data from the Intergovernmental Panel on Climate Change (IPCC). Climate change is not a phenomenon that affects all regions equally. While some areas might experience more frequent and intense rainfall, others are confronted with extended periods of drought, which can have severe impact on agriculture. The change in temperature patterns is also unevenly distributed, with cities being particularly vulnerable to heatwaves. The API provides daily climate data rather than climate indices for more granular detail of changes. The data provides CSV file as well as API URL. It is licensed under a Creative Commons Attribution 4.0 International License.\n",
+    "\n",
+    "3. Copernicus Data Space Ecosystem. (n.d.). _Sentinel Hub Process API documentation_. Retrieved from https://documentation.dataspace.copernicus.eu/APIs/SentinelHub/Process.html\n",
+    "\t\t\n",
+    "    The Processing API is the most commonly used API in Sentinel Hub as it provides images based on satellite data. Raw satellite data, simple band combinations, and calculations of simple remote sensing indices can be requested from this API. Users can specify area of interest for a request. Data from Copernicus has a free, full and open data policy for non-commercial use.\n",
+    "\n",
+    "4. Copernicus Data Space Ecosystem. (n.d.). Sentinel Hub Statistical API documentation. Retrieved from https://documentation.dataspace.copernicus.eu/APIs/SentinelHub/Statistical.html\n",
+    "\t\t\n",
+    "    The Statistical API provides statistics calculated based on satellite imagery without having to download images. Example requests can be cloudy pixels for a given area of interest and time period. This API is similar to the Processing API but returning a calculated results in JSON format instead of images. Histograms can be requested too. Data from Copernicus has a free, full and open data policy for non-commercial use.\n",
+    "\n",
+    "5. U.S. Census Bureau. (n.d.). _Economic Census_. U.S. Department of Commerce. Retrieved from https://www.census.gov/data/developers/data-sets/economic-census.html\n",
+    "\t\t\n",
+    "    The Economic Census is the official measure of the Nation's businesses and economy. Held every five years, this survey acts as the statistical foundation for tracking current economic indicators, including the Gross Domestic Product and the Producer Price Index. This dataset has scale up to consolidated city which provide more granular details than state or county level. Accessing through API, there is no specific usage restrictions specified in this public domain. \n",
     "\n",
     "##### Potential Analyses:\n",
     "Most of the data sources listed above include a time parameter that historical data can be extracted, engineered, and visualize. They feature climate patterns over time such as temperature, precipitation, wind direction, snow depth changes, etc. To visualize climate trend at area of interest on a public-facing dashboard, analyses can be histograms or line charts showing statistic over time. Extracted demographic and socio-economic contexts from census data can be shown as cross-tabs with featuring climate data to show correlation of climate change and community impacts.\n",
